# tradingsim

./: .gitignore  .noserc  README.md  log.conf  pyproject.toml  pytest.ini  run.py
tests/: TestAgent.py  TestDotRenderer.py  TestGoods.py  TestUtils.py  dotrenderertests.py
tradingsim/: configuration.py  game.py  main.py  manualdata.py  utils.py
tradingsim/renderers/: dotrenderer.py
tradingsim/simulation/: agent.py  goods.py  location.py  simulation.py
